--- a/src/components/NavComponent/theme/themeNavigation.css
+++ b/src/components/NavComponent/theme/themeNavigation.css
@@ -1,6 +1,3 @@
-*{
-    margin: 0
-}
 .nav-container{
     background-color: transparent;
     width: 100%;
@@ -8,65 +5,62 @@
     transition: .5s;
     position: fixed;
     z-index: 1;
-
 }
+
 .nav-content{
-    height: 100vh;
-    width: 70%;
+    height: 90vh;
+    width: 100%;
+    margin-top: 10vh;
     z-index: 1;
     background: #fff;
     transition: .5s;
     display: flex;
     flex-direction: column;
-    padding-top:1%;
+    justify-content: center;
+    align-items: center;
 }
+
 .open{
     margin-left: 0;
 }
+
 .close{
-    margin-left: -100%;
-    
+    margin-left: -100%; 
 }
-.logo{
-    color: #000030;
-    padding: 3% 3%;
-    margin: 0.5rem 0;
-    border-bottom: 1px solid #ccc;
-}
+
 .nav-content .logo h1{
     padding: 10px 20px;
 }
+
 .nav-item {
-    padding-top: 13%;
+    padding-top: 0;
 }
+
 .nav-content li{
     list-style: none;
     width: 100%;
     padding: 10px 20px;
+    text-align: center;
 }
 
 .nav-content li a{
     color: #000;
     text-decoration: none;
-    font-size: 20px;
+}
+.nav-content li a i {
+    font-size: 30px;
 }
 .nav-content li a span{
-    margin-left: 20px
+    margin-left: 10px;
+    font-size: 30px;
+
 }
 .burger-icon{
     position: absolute;
     top: 0;
     right: 0;
     cursor: pointer;
-    z-index: 1000;
-    margin: 0.5rem  1rem;
-
+    z-index: 100;
+    margin: 1rem  1rem;
 }
 
-.page-container{
-   padding-top: 15%;
-   padding: 5% 3%;
-}
-.page-container h1{
-    font-size: 20px;
-}
